# elementplus-vite-vue3

./: .gitignore  Makefile  README.md  components.d.ts  package.json  pyproject.toml  setup.cfg  tsconfig.json  vite.config.ts
server/apps/api/auth/: models.py
server/apps/api/auth/v1/: routers.py
server/apps/core/api/: permissions.py
server/apps/core/main/: urls.py
server/apps/core/utils/management/commands/: initconfig.py
server/config/settings/base/: apps.py
server/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
src/: main.ts
src/styles/: global.variables.scss  index.scss
src/styles/views/: _home.scss
src/views/: AboutView.vue  HomeView.vue
