[tool.poetry]
name = "elementplus-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.taskipy.tasks]
manage = "python ./server/manage.py"
clear = "task manage clear"
dumpdata = "task manage dump"
migrate = "task manage migrate --noinput"
server = "task manage runserver"
loaddata = "task manage loaddata"
startapp = "task manage createapp"
initconfig = "task manage initconfig"
makemigrations = "task manage makemigrations"
createsuperuser = "task manage createsuperuser"
collectstatic = "task manage collectstatic --noinput"
gunicorn = "gunicorn --timeout 300 --chdir ./server config.wsgi:application -b 0.0.0.0:8000"
defaultadmin = "task manage defaultadmin"
defaultfixtures = "task manage defaultfixtures"
flake_lint = "flake8 ./server"


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
django-admin-interface = "^0.29.4"
taskipy = "^1.14.1"
psutil = "5.7.2"
py-linq = "^1.4.0"
pycodestyle = "^2.12.1"
pycparser = "^2.22"
pyflakes = "^3.2.0"
pyjwt = "2.9.0"
python-slugify = "^8.0.4"
pytz = "^2025.1"
pyyaml = "^6.0.2"
referencing = "^0.36.2"
rpds-py = "^0.23.1"
six = "^1.17.0"
sqlparse = "^0.5.3"
tablib = "^3.8.0"
text-unidecode = "^1.3"
tomli = "^2.2.1"
typing-extensions = "^4.12.2"
tzdata = "^2025.1"
uritemplate = "^4.1.1"
xlrd = "^2.0.1"
xlsxwriter = "^3.2.2"
xlwt = "^1.3.0"
django-apptemplates = "^1.5"
django-admin-sortable2 = "^2.2.4"
django-easy-select2 = "^1.5.8"
django-filter = "^25.1"
drf-spectacular = "^0.28.0"
drf-spectacular-sidecar = "^2025.2.1"
django-extra-settings = "^0.13.0"
dj-rest-auth = "^7.0.1"
djangorestframework-simplejwt = "^5.5.0"
django-environ = "^0.12.0"
django-import-export = "^4.3.7"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.15.2"
django-service-objects = "^0.7.1"
djangorestframework-camel-case = "^1.4.2"
pillow = "^11.1.0"
django-ckeditor-5 = "^0.2.17"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
flake8 = "^7.1.2"
werkzeug = "^3.1.3"
pyopenssl = "^25.0.0"
django-extensions = "^3.2.3"
autoflake = "^2.3.1"


[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
